mdapi_output_dir/objects/Product__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <label>Product</label>
    
    <nameField>
        
        <displayFormat>Product-{00000}</displayFormat>
        
        <label>Product Number</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    
    <pluralLabel>Products</pluralLabel>
    
    
    
    <sharingModel>ControlledByParent</sharingModel>
    
    
<fields>
        
    <fullName>Description__c</fullName>
        
        
    <label>Description</label>
        
        
        
        
    <type>TextArea</type>
        
</fields>
    <fields>
        
    <fullName>Durability__c</fullName>
        
        
    <inlineHelpText>This can only be up to 100.00%</inlineHelpText>
        
    <label>Durability</label>
        
    <precision>5</precision>
        
        
    <scale>2</scale>
        
        
        
    <type>Percent</type>
        
</fields>
    <fields>
        
    <fullName>Health_Restored__c</fullName>
        
        
    <label>Health Restored</label>
        
    <precision>12</precision>
        
        
    <scale>2</scale>
        
        
        
    <type>Number</type>
        
        
</fields>
    <fields>
        
    <fullName>Inventory__c</fullName>
        
        
    <label>Inventory</label>
        
    <precision>18</precision>
        
        
    <scale>0</scale>
        
        
        
    <type>Number</type>
        
        
</fields>
    <fields>
        
    <fullName>Name__c</fullName>
        
        
    <label>Name</label>
        
    <length>40</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Store__c</fullName>
        
        
    <label>Store</label>
        
    <referenceTo>Store__c</referenceTo>
        
    <relationshipLabel>Products</relationshipLabel>
        
    <relationshipName>Products</relationshipName>
        
    <relationshipOrder>0</relationshipOrder>
        
        
        
        
    <type>MasterDetail</type>
        
        
</fields>
    <fields>
        
    <fullName>Weight__c</fullName>
        
        
    <label>Weight</label>
        
    <precision>7</precision>
        
        
    <scale>2</scale>
        
        
        
    <type>Number</type>
        
        
</fields>
    <recordTypes>
        
    <fullName>Consumable</fullName>
        
    <active>true</active>
        
    <label>Consumable</label>
        
</recordTypes>
    <recordTypes>
        
    <fullName>Health_Item</fullName>
        
    <active>true</active>
        
    <label>Health Item</label>
        
</recordTypes>
    <recordTypes>
        
    <fullName>Weapon</fullName>
        
    <active>true</active>
        
    <label>Weapon</label>
        
</recordTypes>
    <listViews>
        
    <fullName>All</fullName>
        
    <filterScope>Everything</filterScope>
        
    <label>All</label>
        
</listViews>
</CustomObject>